# py-dev-safety-net

./: .gitignore  Dockerfile  README.md  justfile  pyproject.toml  requirements.txt
app/: main.py
