[project]
name = "py-dev-safety-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.1",
    "great-tables>=0.17.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "streamlit>=1.44.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "notebook>=7.3.3",
    "pytest>=8.3.5",
]
